--- a/src/ui/style.less
+++ b/src/ui/style.less
@@ -68,8 +68,13 @@
 
 --page-bg: var(--neutral-100);
 --content-bg: var(--neutral-200);
+}
 
 
+@media (prefers-color-scheme: dark) {
+  :host {
+    --ui-menu-bg: var(--neutral-200);
+  }
 
 }
 
